2005-02-25  Matthias Clasen  <mclasen@redhat.com>

	* demos/testpixbuf.c (main): Remove a C++ comment.  (#168531, 
	Paul Cornett)

	* gtk/gtkcombobox.c (gtk_combo_box_menu_fill_level): Don't leak a 
	path here.  (#168443, Morten Welinder)

2005-02-24  Robert Ögren  <gtk@roboros.com>

	Implement better handling of Wintab tablet context overlap on
	Win32. (#167298)

	* gdk/win32/gdkinput-win32.c (_gdk_input_set_tablet_active): New
	function that brings any tablet contexts to the top of the overlap
	order.
	* gdk/win32/gdkinput-win32.h: Declare _gdk_input_set_tablet_active ()
	* gdk/win32/gdkevents-win32.c (gdk_event_translate):
	Call _gdk_input_set_tablet_active when a window is activated (on
	WM_ACTIVATE)

2005-02-24  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates.

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_select_path): 
	Don't leak parent_path.  (#168435, Morten Welinder)

	* gtk/gtkcombobox.c: Consistently use gtk_tree_row_reference_valid().
	(gtk_combo_box_model_row_deleted): Update the displayed row in 
	the cell_view.  (#167842, Gustavo Carneiro)

2005-02-24  Matthias Clasen  <mclasen@redhat.com>

	Fix #167259, reported by  Christian Persch:
	
	* gtk/gtkwidget.c (gtk_widget_unparent): Unmap the reparented 
	widget, even if we avoid the unrealizing. 
	(gtk_widget_reparent_subwindows): Make reparenting work for
	!NO_WINDOW widgets which have other windows which are siblings
	of widget->window (as e.g. GtkSpinButton).

2005-02-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_row_changed): 
	Don't emit a warning if a parent node is filtered out. (#164726,
	Olivier Sessink)

2005-02-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklabel.c (gtk_label_style_set): Revert the last 
	change, since gtk_widget_set_style_internal() already
	queues a resize.

2005-02-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklabel.c (gtk_label_style_set): Queue a resize, since